[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/assets/switch.png" type="Texture" id=1]
[ext_resource path="res://scenes/Switch.gd" type="Script" id=2]
[ext_resource path="res://resources/sfx/Click_01.wav" type="AudioStream" id=3]
[ext_resource path="res://resources/sfx/Click_02.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "activated",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 8 )

[node name="Switch" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
z_index = -2
frames = SubResource( 3 )
animation = "activated"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Player_entered" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -6.0

[node name="Player_exited" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -6.0
[connection signal="body_entered" from="." to="." method="_on_Switch_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Switch_body_exited"]
